--- a/src/views/index.html
+++ b/src/views/index.html
@@ -65,7 +65,7 @@
         </div>
         <!-- Imagen de Pikachu -->
         <div class="hero-image">
-          <img src="/img/Picachu.png" alt="Pikachu" />
+          <img src="https://pokemonneas.s3.us-east-1.amazonaws.com/Picachu.png" alt="Pikachu" />
         </div>
       </div>
     </section>
